# cpp_greetings

./: CMakeLists.txt  Greetings.cpp  Greetings.h  README.md  build.bat  conanfile.py  test.cpp
